Add colors to boxes to indicate correctness

--- a/src/main/resources/org/example/wordle/hello-view.fxml
+++ b/src/main/resources/org/example/wordle/hello-view.fxml
@@ -1,16 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<VBox alignment="CENTER" prefHeight="573.0" prefWidth="462.0" spacing="20.0"
+      xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="org.example.wordle.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
+    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+        <children>
+            <Label fx:id="box00" alignment="CENTER" prefHeight="70.0" prefWidth="70.0"
+                   style="-fx-border-color: black; -fx-background-color: white;">
+                <font>
+                    <Font name="Arial" size="58.0"/>
+                </font>
+                <HBox.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+            <Label fx:id="box01" alignment="CENTER" prefHeight="70.0" prefWidth="70.0"
+                   style="-fx-border-color: black; -fx-background-color: white;">
+                <font>
+                    <Font name="Arial" size="58.0"/>
+                </font>
+                <HBox.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+            <Label fx:id="box02" alignment="CENTER" prefHeight="70.0" prefWidth="70.0"
+                   style="-fx-border-color: black; -fx-background-color: white;">
+                <font>
+                    <Font name="Arial" size="58.0"/>
+                </font>
+                <HBox.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+            <Label fx:id="box03" alignment="CENTER" prefHeight="70.0" prefWidth="70.0"
+                   style="-fx-border-color: black; -fx-background-color: white;">
+                <font>
+                    <Font name="Arial" size="58.0"/>
+                </font>
+                <HBox.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+            <Label fx:id="box04" alignment="CENTER" prefHeight="70.0" prefWidth="70.0"
+                   style="-fx-border-color: black; -fx-background-color: white;">
+                <font>
+                    <Font name="Arial" size="58.0"/>
+                </font>
+                <HBox.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </HBox.margin>
+            </Label>
+        </children>
+
+    </HBox>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <TextArea fx:id="guessInput" maxWidth="-Infinity" prefHeight="10.0" prefWidth="219.0"/>
+    <Button onAction="#checkGuess" text="Check">
+        <font>
+            <Font name="Arial" size="14.0"/>
+        </font>
+    </Button>
 </VBox>
