--- a/src/main/resources/org/example/wordle/hello-view.fxml
+++ b/src/main/resources/org/example/wordle/hello-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="663.0" prefWidth="462.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.wordle.Main">
+<VBox alignment="CENTER" prefHeight="700.0" prefWidth="462.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.wordle.Main">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -268,22 +268,44 @@
                     <Font name="Arial" size="58.0" />
                 </font>
                 <HBox.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                 </HBox.margin>
             </Label>
         </children>
     </HBox>
-    <Label fx:id="welcomeText"/>
+    <Label fx:id="welcomeText" />
 
-    <TextField fx:id="guessInput" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="35.0"
-               prefWidth="100.0">
+    <TextField fx:id="guessInput" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="100.0">
         <font>
-            <Font name="Arial" size="20.0"/>
+            <Font name="Arial" size="20.0" />
         </font>
     </TextField>
-    <Button onAction="#checkGuess" text="Check">
-        <font>
-            <Font name="Arial" size="14.0"/>
-        </font>
-    </Button>
+   <HBox alignment="TOP_CENTER" prefHeight="0.0" prefWidth="422.0">
+      <children>
+         <Button mnemonicParsing="false" text="Answer">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin>
+            <font>
+               <Font name="Arial" size="13.0" />
+            </font>
+         </Button>
+          <Button onAction="#checkGuess" text="Check">
+              <font>
+                  <Font name="Arial" size="14.0" />
+              </font>
+            <HBox.margin>
+               <Insets left="110.0" />
+            </HBox.margin>
+          </Button>
+         <Button mnemonicParsing="false" text="Restart">
+            <HBox.margin>
+               <Insets left="110.0" />
+            </HBox.margin>
+            <font>
+               <Font name="Arial" size="13.0" />
+            </font>
+         </Button>
+      </children>
+   </HBox>
 </VBox>
